@@ -240,7 +240,6 @@
   <block id="113933a0a6b3eb57d22f707e6384bd49" category="paragraph">Sarà necessario<block ref="5eb9de2715b74ed434f03d8a9fef9b70" category="inline-link-rx"></block> ed effettuare l'accesso utilizzando uno dei<block ref="17b71e2884d56fdbadfe752689dbd4d6" category="inline-link-rx"></block> .</block>
   <block id="aada29daee1d64ed0fe907043855cb7e" category="inline-image-macro">Due</block>
   <block id="b36a952e38561cb86fdb6a473044fce0" category="paragraph-title"><block ref="54f425ce8d89f4ed6b8a546561af5d60" category="inline-image-macro-rx" type="image"></block> Aggiungi credenziali e autorizzazioni AWS al tuo account</block>
-  <block id="6b2dd6734a7cf2cd8fa1690ca19ccd80" category="paragraph">Puoi utilizzare la fabbrica dei carichi di lavoro in modalità _Basic_ senza aggiungere credenziali per accedere all'account AWS. L'aggiunta di credenziali AWS alla fabbrica dei carichi di lavoro in modalità _Read_ o _Automate_ fornisce all'account della fabbrica dei carichi di lavoro le autorizzazioni necessarie per creare e gestire i file system FSX per ONTAP, nonché per implementare e gestire i progetti Builders.</block>
   <block id="fb391f4cf6483b8b419032dc188bd9d8" category="inline-link">Informazioni su come aggiungere credenziali e autorizzazioni</block>
   <block id="c01367c7ec78f01defe37cab59b14851" category="paragraph"><block ref="d162e97fcdf643050da77419fb18d12e" category="inline-link-rx"></block>.</block>
   <block id="ca8a2087e5557e317599344687a57391" category="inline-image-macro">Tre</block>
@@ -260,9 +259,7 @@
   <block id="7860bfc83777aac923d73f1002162f9d" category="doc">Requisiti dei costruttori</block>
   <block id="7881e5952d93ca1a1396ec11c08fa645" category="list-text">Account e login di fabbrica del carico di lavoro</block>
   <block id="97911b3c54a4e826b34c1f79026316c5" category="list-text">Credenziali e autorizzazioni AWS</block>
-  <block id="2e9df4fc7da7ba6ad813c1450e8f82ca" category="list-text">Devi aggiungere le credenziali AWS alla fabbrica dei carichi di lavoro con l'automazione delle autorizzazioni, il che significa che utilizzerai la fabbrica dei carichi di lavoro in modalità _automatizza_ per i costruttori.</block>
   <block id="5145374f219e1c177ab5588a5344aa6e" category="inline-link">Scopri come aggiungere le credenziali AWS alla fabbrica di carichi di lavoro</block>
-  <block id="1b0cdac06552abc95fe86270037368b2" category="paragraph">Le autorizzazioni per la modalità _Basic_ e la modalità _Read_ non sono attualmente supportate. <block ref="ced1a4827b1ea3c1da0273c3d73fdd46" category="inline-link-rx"></block></block>
   <block id="e48bc5875c01dd007b7b2a370e879cde" category="list-text">File system FSX per ONTAP</block>
   <block id="c16810aa96ec44a060863610996db3f6" category="list-text">Ti serve almeno un file system FSX per ONTAP:</block>
   <block id="cf935c2a5823110e8a09c3289b67514a" category="list-text">Il file system verrà utilizzato dai costruttori per memorizzare i progetti e le aree di lavoro creati.</block>
@@ -350,4 +347,10 @@
   <block id="dd490b81914dd945601e442a41cb4222" category="sidebar">Community NetApp</block>
   <block id="abd0fe91ce589ecf3c7bad0543ccad16" category="sidebar">Blog BlueXP</block>
   <block id="ad203e818e0c9d7f42f1c260b33875f3" category="sidebar">Webinar sul cloud</block>
+  <block id="514f1fc0ac0ff6e4200d3637146367f1" category="doc">Terminologia aggiornata per le autorizzazioni</block>
+  <block id="a7b97ab7d88b015e92ed51ef4bee9c25" category="paragraph">L'interfaccia utente di fabbrica del carico di lavoro e la documentazione ora utilizzano "sola lettura" per fare riferimento alle autorizzazioni di lettura e "lettura-scrittura" per fare riferimento all'automazione delle autorizzazioni.</block>
+  <block id="5df5d0c3be037db37091a51c0b7dd2a3" category="paragraph">Puoi utilizzare la fabbrica dei carichi di lavoro in modalità _Basic_ senza aggiungere credenziali per accedere all'account AWS. L'aggiunta di credenziali AWS alla fabbrica dei carichi di lavoro in modalità _Read-Only_ o _Read/Write_ consente di assegnare all'account della fabbrica dei carichi di lavoro le autorizzazioni necessarie per creare e gestire i file system FSX per ONTAP, nonché per implementare e gestire i progetti Builders.</block>
+  <block id="98c15024a0a6463353585181f922a6d8" category="list-text">Devi aggiungere le credenziali AWS alla fabbrica dei carichi di lavoro con autorizzazioni di lettura/scrittura, il che significa che utilizzerai la fabbrica dei carichi di lavoro in modalità _lettura/scrittura_ per i costruttori.</block>
+  <block id="19e72e9857cc00ad57d29107d2e5f1fb" category="paragraph">Le autorizzazioni per la modalità _Basic_ e la modalità _Read-only_ non sono attualmente supportate. <block ref="ced1a4827b1ea3c1da0273c3d73fdd46" category="inline-link-rx"></block></block>
+  <block id="dac96c84baa92faab0eb342df5283a1b" category="section-title">4 maggio 2025</block>
 </blocks>
