@@ -15,6 +15,16 @@ Scopri le novità della funzionalità costruttori di workload Factory.
 
 
 
+== 4 maggio 2025
+
+
+
+=== Terminologia aggiornata per le autorizzazioni
+
+L'interfaccia utente di fabbrica del carico di lavoro e la documentazione ora utilizzano "sola lettura" per fare riferimento alle autorizzazioni di lettura e "lettura-scrittura" per fare riferimento all'automazione delle autorizzazioni.
+
+
+
 == 1 dicembre 2024
 
 
